# DogLib

./: CMakeLists.txt  README.md
Lib/: CMakeLists.txt
Tests/: CMakeLists.txt
include/: dog.h  observer.h  subject.h
src/: dog.cpp  observer.cpp  subject.cpp
tests/: dogTest.cpp
